--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
   "dependencies": {
     "@tailwindcss/ui": "^0.6.2",
     "axios": "^0.20.0",
+    "codemirror": "^5.57.0",
     "next": "9.5.3",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
-    "prismjs": "^1.21.0",
     "react": "16.13.1",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "16.13.1",
     "tailwindcss": "^1.8.10"
   },
-  "devDependencies": {
-    "babel-plugin-prismjs": "^2.0.1"
-  }
+  "devDependencies": {}
 }
