beautify js demo code

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/ui": "^0.6.2",
     "axios": "^0.20.0",
     "codemirror": "^5.57.0",
+    "js-beautify": "^1.13.0",
     "next": "9.5.3",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
